--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,14 +1,20 @@
+---
+
+plugins:
+  # https://github.com/jest-community/eslint-plugin-jest
+  - jest
+
+# # https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
   node: true
-  es2021: true
-
+          
 extends:
-  - airbnb-base
+  - 'airbnb-base'
+  - 'plugin:jest/recommended'
 
 parserOptions:
-  ecmaVersion: 12
-  sourceType: module
-  
-rules: 
+  ecmaVersion: latest
+          
+rules:
   no-console: 0
   import/extensions: 0
