--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "prettier": "3.0.3"
   }
 }
